bug fix: make sure data does not paint behind the map

--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -306,6 +306,10 @@ body {
 }
 
 /* ------ SVG style ------------------------------------------  */
+.chart-svg {
+    width: 780px;
+    height: 500px;
+}
 
 .axis path,
 .axis line {
